--- a/1-2-AX_CPT_Decay_Continuous_v1.ipynb
+++ b/1-2-AX_CPT_Decay_Continuous_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -173,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def TD(ntrials,lrate,gamma,td_lambda,temp,decay,time):\n",
@@ -265,6 +267,13 @@
     "    context = 2 # init context\n",
     "    \n",
     "    perf_arr = np.zeros((4,3))\n",
+    "    \n",
+    "    # lists used for displaying performance graph\n",
+    "    AX_data_pts = []\n",
+    "    BX_data_pts = []\n",
+    "    AY_data_pts = []\n",
+    "    BY_data_pts = []\n",
+    "    \n",
     "    for trial in range(ntrials):\n",
     "        \n",
     "        context = np.random.choice([0,1],p=[.5,.5]) # choose context signal\n",
@@ -289,13 +298,21 @@
     "        #print('ContexWM:',current_outer_wm)\n",
     "        #print(context,current_outer_wm,action)\n",
     "        # epsilon goes here\n",
+    "        if random.random() < epsilon:\n",
+    "            current_outer_wm = random.randint(0,nouter_wm)\n",
+    "            action = random.randrange(nactions)\n",
+    "            \n",
     "        value = values[current_outer_wm,action]\n",
     "        eligibility = np.zeros(n)\n",
     "        global_context = context # used for reward function\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        for step in range(nsteps):\n",
     "            r = reward3[action] # # reward function, may not be needed\n",
     "            \n",
-    "            if trial == 10:\n",
+    "            # absorb reward\n",
+    "            if trial%50 == 0:\n",
     "                eligibility = computed[context,cue,probe,current_outer_wm,current_inner_wm,action,:] + td_lambda*eligibility\n",
     "                error = r - value\n",
     "                W += lrate*log_transform(error)*eligibility\n",
@@ -323,7 +340,10 @@
     "            current_inner_wm = wm_action[0]\n",
     "            action = wm_action[1]\n",
     "            # epsilon goes here\n",
-    "           \n",
+    "            if random.random() < epsilon:\n",
+    "                current_inner_wm = random.randint(0,ninner_wm) \n",
+    "                action = random.randrange(nactions)\n",
+    "            \n",
     "            value = values[current_inner_wm,action]\n",
     "            error = (r+gamma*value)-pvalue\n",
     "            W += lrate*log_transform(error)*eligibility\n",
@@ -352,6 +372,9 @@
     "            #action = wm_action[1]\n",
     "            action = np.argmax(sm_prob)\n",
     "            # epsilon goes here\n",
+    "            if random.random() < epsilon:\n",
+    "                action = random.randrange(nactions)\n",
+    "            \n",
     "            #value = values[current_inner_wm,action]\n",
     "            r = reward[global_cue,global_probe,action]\n",
     "            value = values[action]\n",
@@ -361,6 +384,8 @@
     "            \n",
     "            \n",
     "            performance(global_cue,global_probe,action,global_context,perf_arr)\n",
+    "            \n",
+    "            #print(AX_data_pts)\n",
     "        ########################################\n",
     "        #print(context,cue,probe,action)\n",
     "        if trial%1000==0:\n",
@@ -370,6 +395,12 @@
     "            print(format('BX |','<10s'),format(perf_arr[1,0],'>12.1f'),format(perf_arr[1,2],'>20.2%'))\n",
     "            print(format('AY |','<10s'),format(perf_arr[2,0],'>12.1f'),format(perf_arr[2,2],'>20.2%'))\n",
     "            print(format('BY |','<10s'),format(perf_arr[3,0],'>12.1f'),format(perf_arr[3,2],'>20.2%'))\n",
+    "            \n",
+    "            AX_data_pts.append(perf_arr[0,2])\n",
+    "            BX_data_pts.append(perf_arr[1,2])\n",
+    "            AY_data_pts.append(perf_arr[2,2])\n",
+    "            BY_data_pts.append(perf_arr[3,2])\n",
+    "            \n",
     "            perf_arr = np.zeros((4,3))\n",
     "            print(end='\\n\\n')\n",
     "        \n",
@@ -380,12 +411,21 @@
     "    print(format('AY |','<10s'),format(perf_arr[2,0],'>12.1f'),format(perf_arr[2,2],'>20.2%'))\n",
     "    print(format('BY |','<10s'),format(perf_arr[3,0],'>12.1f'),format(perf_arr[3,2],'>20.2%'))\n",
     "\n",
-    "    print(end='\\n\\n')"
+    "    print(end='\\n\\n')\n",
+    "    \n",
+    "    V1,V2,V3,V4 = AX_data_pts,BX_data_pts,AY_data_pts,BY_data_pts\n",
+    "    \n",
+    "    plotly.offline.iplot([\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V1, type='scatter',name='AX'),\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V2, type='scatter',name='BX'),\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V3, type='scatter',name='AY'),\n",
+    "            dict(x=[x for x in range(len(V1))] , y=V4, type='scatter',name='BY')\n",
+    "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -395,62 +435,242 @@
       "Trial: 0\n",
       "\n",
       "                  count          performance\n",
-      "AX |               28.0              100.00%\n",
-      "BX |               25.0                4.00%\n",
-      "AY |               23.0                0.00%\n",
-      "BY |               24.0              100.00%\n",
+      "AX |                0.0                0.00%\n",
+      "BX |                0.0                0.00%\n",
+      "AY |                0.0                0.00%\n",
+      "BY |                0.0                0.00%\n",
       "\n",
       "\n",
       "Trial: 1000\n",
       "\n",
       "                  count          performance\n",
-      "AX |            24934.0              100.00%\n",
-      "BX |            25047.0               99.92%\n",
-      "AY |            25011.0               99.90%\n",
-      "BY |            24908.0              100.00%\n",
+      "AX |            24384.0               94.87%\n",
+      "BX |            24659.0               94.46%\n",
+      "AY |            24538.0               91.66%\n",
+      "BY |            24419.0               90.09%\n",
       "\n",
       "\n",
       "Trial: 2000\n",
       "\n",
       "                  count          performance\n",
-      "AX |            24981.0              100.00%\n",
-      "BX |            25039.0              100.00%\n",
-      "AY |            25034.0              100.00%\n",
-      "BY |            24946.0              100.00%\n",
+      "AX |            24259.0               93.30%\n",
+      "BX |            24361.0               95.30%\n",
+      "AY |            24578.0               97.67%\n",
+      "BY |            24802.0               92.68%\n",
       "\n",
       "\n",
       "Trial: 3000\n",
       "\n",
       "                  count          performance\n",
-      "AX |            24885.0              100.00%\n",
-      "BX |            25046.0              100.00%\n",
-      "AY |            25020.0              100.00%\n",
-      "BY |            25049.0              100.00%\n",
+      "AX |            24397.0               93.22%\n",
+      "BX |            24554.0               95.85%\n",
+      "AY |            24608.0               94.18%\n",
+      "BY |            24441.0               89.89%\n",
+      "\n",
+      "\n",
+      "Trial: 4000\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24547.0               91.99%\n",
+      "BX |            24445.0               95.04%\n",
+      "AY |            24546.0               96.48%\n",
+      "BY |            24462.0               91.00%\n",
+      "\n",
+      "\n",
+      "Trial: 5000\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24404.0               95.86%\n",
+      "BX |            24529.0               96.91%\n",
+      "AY |            24674.0               95.82%\n",
+      "BY |            24393.0               92.37%\n",
+      "\n",
+      "\n",
+      "Trial: 6000\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24586.0               94.11%\n",
+      "BX |            24502.0               95.89%\n",
+      "AY |            24162.0               96.28%\n",
+      "BY |            24750.0               92.49%\n",
+      "\n",
+      "\n",
+      "Trial: 7000\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24569.0               92.90%\n",
+      "BX |            24414.0               94.43%\n",
+      "AY |            24503.0               95.35%\n",
+      "BY |            24514.0               90.60%\n",
+      "\n",
+      "\n",
+      "Trial: 8000\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24558.0               88.21%\n",
+      "BX |            24583.0               95.07%\n",
+      "AY |            24709.0               95.07%\n",
+      "BY |            24150.0               91.39%\n",
+      "\n",
+      "\n",
+      "Trial: 9000\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24283.0               93.58%\n",
+      "BX |            24710.0               95.98%\n",
+      "AY |            24504.0               96.79%\n",
+      "BY |            24503.0               90.87%\n",
+      "\n",
+      "\n",
+      "Trial: 9999\n",
+      "\n",
+      "                  count          performance\n",
+      "AX |            24388.0               93.57%\n",
+      "BX |            24474.0               95.11%\n",
+      "AY |            24418.0               94.59%\n",
+      "BY |            24720.0               92.25%\n",
       "\n",
       "\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-173-285bd50e781d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mTD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# (num trials, learning rate, discount factor, lambda, temperature, decay factor, decay time steps)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-172-71ace59fa1cf>\u001b[0m in \u001b[0;36mTD\u001b[0;34m(ntrials, lrate, gamma, td_lambda, temp, decay, time)\u001b[0m\n\u001b[1;32m    166\u001b[0m             \u001b[0mglobal_probe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprobe\u001b[0m \u001b[0;31m# used for reward function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomputed\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcontext\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprobe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcurrent_outer_wm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcurrent_inner_wm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbias\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    169\u001b[0m             \u001b[0msm_prob\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m             \u001b[0;31m#possible_wm = np.unique(np.array([2,signal]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "AX",
+         "type": "scatter",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9
+         ],
+         "y": [
+          0,
+          0.94873687664042,
+          0.932973329485964,
+          0.9322047792761405,
+          0.9199494846620768,
+          0.9585723651860351,
+          0.9410640201740829,
+          0.9290162399772071,
+          0.8820750875478459,
+          0.9357987069143022
+         ]
+        },
+        {
+         "name": "BX",
+         "type": "scatter",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9
+         ],
+         "y": [
+          0,
+          0.9445638509266394,
+          0.9529575961577932,
+          0.9584589068990795,
+          0.9504193086520761,
+          0.9690978026010029,
+          0.9589013141784344,
+          0.9442532972884411,
+          0.9506976365781231,
+          0.9598138405503844
+         ]
+        },
+        {
+         "name": "AY",
+         "type": "scatter",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9
+         ],
+         "y": [
+          0,
+          0.9166191213627842,
+          0.9766864675726259,
+          0.9417669050715215,
+          0.9647600423694288,
+          0.9582151252330389,
+          0.9627928151643076,
+          0.9535158960127331,
+          0.9507062204055202,
+          0.9679236043095005
+         ]
+        },
+        {
+         "name": "BY",
+         "type": "scatter",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6,
+          7,
+          8,
+          9
+         ],
+         "y": [
+          0,
+          0.9008558909046235,
+          0.9268204177082493,
+          0.8989403052248272,
+          0.9100237102444608,
+          0.9236666256712991,
+          0.9249292929292929,
+          0.9060128905931305,
+          0.9139130434782609,
+          0.9087050565236909
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"810e53bb-96f0-4cb6-9c55-abe44cc843c4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"810e53bb-96f0-4cb6-9c55-abe44cc843c4\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.94873687664042, 0.932973329485964, 0.9322047792761405, 0.9199494846620768, 0.9585723651860351, 0.9410640201740829, 0.9290162399772071, 0.8820750875478459, 0.9357987069143022], \"type\": \"scatter\", \"name\": \"AX\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.9445638509266394, 0.9529575961577932, 0.9584589068990795, 0.9504193086520761, 0.9690978026010029, 0.9589013141784344, 0.9442532972884411, 0.9506976365781231, 0.9598138405503844], \"type\": \"scatter\", \"name\": \"BX\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.9166191213627842, 0.9766864675726259, 0.9417669050715215, 0.9647600423694288, 0.9582151252330389, 0.9627928151643076, 0.9535158960127331, 0.9507062204055202, 0.9679236043095005], \"type\": \"scatter\", \"name\": \"AY\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.9008558909046235, 0.9268204177082493, 0.8989403052248272, 0.9100237102444608, 0.9236666256712991, 0.9249292929292929, 0.9060128905931305, 0.9139130434782609, 0.9087050565236909], \"type\": \"scatter\", \"name\": \"BY\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"810e53bb-96f0-4cb6-9c55-abe44cc843c4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"810e53bb-96f0-4cb6-9c55-abe44cc843c4\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.94873687664042, 0.932973329485964, 0.9322047792761405, 0.9199494846620768, 0.9585723651860351, 0.9410640201740829, 0.9290162399772071, 0.8820750875478459, 0.9357987069143022], \"type\": \"scatter\", \"name\": \"AX\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.9445638509266394, 0.9529575961577932, 0.9584589068990795, 0.9504193086520761, 0.9690978026010029, 0.9589013141784344, 0.9442532972884411, 0.9506976365781231, 0.9598138405503844], \"type\": \"scatter\", \"name\": \"BX\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.9166191213627842, 0.9766864675726259, 0.9417669050715215, 0.9647600423694288, 0.9582151252330389, 0.9627928151643076, 0.9535158960127331, 0.9507062204055202, 0.9679236043095005], \"type\": \"scatter\", \"name\": \"AY\"}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [0.0, 0.9008558909046235, 0.9268204177082493, 0.8989403052248272, 0.9100237102444608, 0.9236666256712991, 0.9249292929292929, 0.9060128905931305, 0.9139130434782609, 0.9087050565236909], \"type\": \"scatter\", \"name\": \"BY\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "TD(20000,.4,.9,.8,.1,0,0)\n",
+    "TD(10000,.4,.9,.8,.1,0,0)\n",
     "# (num trials, learning rate, discount factor, lambda, temperature, decay factor, decay time steps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +777,9 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
